--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,21 +1,16 @@
 {% extends "base.html" %}
 {% block title %}HOME{ % endblock %}
 {% block content %}
-<div class="posts">
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-                            <h1>¡¡BIENVENIDO/A!!<span><br />
-                            ¿Estas preparado para lo que aquí te aguarda?<br/>
-                            Incluso en el lugar más oscuro,la luz más pequeña es lo que más brilla. <br>
-                            Aquí encontrarás una infinidad de juegos con los que comenzar grandes aventuras</span></h1>
-                            <span><p>¡Allé vamos!</p></span>
-                            <a href="/juegos"><img src="/static/images/mando.png" alt="mando"/></a>
-                        </header>
-                    </section>
-            </div>
+<div class="inner">
+    <header class="major">
+        <h1>¡HOLA, AVENTURERO/A!</h1>
+    </header>
+    <div class="content">
+        <p>A responsive site template designed by HTML5 UP<br />
+        and released under the Creative Commons.</p>
+        <ul class="actions">
+            <li><a href="/juegos" class="img" src="/static/images/msx.jpg"></li>
+        </ul>
+    </div>
+</div>
 {% endblock %}
