Modificado inicio.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -6,8 +6,10 @@
         <h1>¡HOLA, AVENTURERO/A!</h1>
     </header>
     <div class="content">
-        <p>A responsive site template designed by HTML5 UP<br />
-        and released under the Creative Commons.</p>
+        <p>¿Estas preparado para lo que aquí te aguarda?<br/>
+        Incluso en el lugar más oscuro,la luz más pequeña es lo que más brilla. <br>
+        Aquí encontrarás una infinidad de juegos con los que comenzar grandes aventuras</p>
+        <span><p>¡Allé vamos!</p></span>
         <ul class="actions">
             <li><a href="/juegos" class="img" src="/static/images/msx.jpg"></li>
         </ul>
