--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
-{% block title %}HOME{ % endblock %}
+{% block title %}HOME{% endblock %}
 {% block content %}
-<div class="inner">
-    <header class="major">
-        <h1>¡HOLA, AVENTURERO/A!</h1>
-    </header>
-    <div class="content">
-        <p>¿Estas preparado para lo que aquí te aguarda?<br/>
-        Incluso en el lugar más oscuro,la luz más pequeña es lo que más brilla. <br>
-        Aquí encontrarás una infinidad de juegos con los que comenzar grandes aventuras</p>
-        <span><p>¡Allé vamos!</p></span>
-        <ul class="actions">
-            <li><a href="/juegos" class="img" src="/static/images/msx.jpg"></li>
-        </ul>
+<section id="two">
+    <div class="inner">
+        <header class="major">
+            <h1>¡HOLA, AVENTURERO/A!</h1>
+        </header>
+        <div class="content">
+            <p>¿Estas preparado para lo que aquí te aguarda?<br/>
+            Incluso en el lugar más oscuro,la luz más pequeña es lo que más brilla. <br>
+            Aquí encontrarás una infinidad de juegos con los que comenzar grandes aventuras</p>
+            <span><p>¡Allévamos!</p></span>
+            <ul class="actions">
+                <li><a href="/juegos" class="img" src="/static/images/msx.jpg"></li>
+            </ul>
+        </div>
     </div>
-</div>
+</section>
 {% endblock %}
