Añadida ruta /juegos

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -11,7 +11,7 @@
             Incluso en el lugar más oscuro,la luz más pequeña es lo que más brilla. <br>
             Aquí encontrarás una infinidad de juegos con los que comenzar grandes aventuras</p>
             <span><p>¡Allévamos!</p></span>
-            <a href="/juegos"><img src="/static/images/msx.jpg" alt="Logo"/></a>
+            <a href="/juegos"><img src="/static/images/msx.png" alt="Logo"/></a>
         </div>
     </div>
 </section>
