--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 				<nav>
 					<li><a href="/">Home</a></li>
 					<li><a href="/juegos">Juegos</a></li>
+					<li><a href="/listajuegos">Lista juegos</a></li>
 				</nav>
 			</header>
 
