--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}HOME{% endblock %}
-{% block content %}
+{% block title %}Home{% endblock %}
+{% block contenido %}
 <section id="two">
     <div class="inner">
         <header class="major">
