Añadido juego.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
-{% block contenido %}
+{% block content %}
 <section id="two">
     <div class="inner">
         <header class="major">
